compiler/lume_parser/src/snapshots/lume_parser__tests__range_snapshots@expr_inclusive.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = (a..=b);\")"
---
SOURCE_FILE@0..16
  LET_STMT@0..16
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    WHITESPACE@7..8 " "
    PAREN_EXPR@8..15
      LEFT_PAREN@8..9 "("
      RANGE_EXPR@9..14
        VARIABLE_EXPR@9..10
          NAME@9..10
            IDENT@9..10 "a"
        DOT_DOT@10..12 ".."
        ASSIGN@12..13 "="
        VARIABLE_EXPR@13..14
          NAME@13..14
            IDENT@13..14 "b"
      RIGHT_PAREN@14..15 ")"
    SEMICOLON@15..16 ";"
