compiler/lume_parser/src/snapshots/lume_parser__tests__return_snapshots@empty.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"return;\")"
---
[
    Return(
        Return {
            value: None,
            location: Location(
                0..7,
            ),
        },
    ),
]
