compiler/lume_parser/src/snapshots/lume_parser__tests__return_snapshots@extra_semi.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"return;;\")"
---
SOURCE_FILE@0..8
  RETURN_STMT@0..7
    RETURN_KW@0..6 "return"
    SEMICOLON@6..7 ";"
  SEMICOLON@7..8 ";"
