compiler/lume_parser/src/snapshots/lume_parser__tests__return_snapshots@scalar.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"return 1;\")"
---
SOURCE_FILE@0..9
  RETURN_STMT@0..9
    RETURN_KW@0..6 "return"
    WHITESPACE@6..7 " "
    LIT_EXPR@7..8
      INTEGER_LIT@7..8
        INTEGER_LIT@7..8 "1"
    SEMICOLON@8..9 ";"
