compiler/lume_parser/src/snapshots/lume_parser__tests__scope_snapshots@empty.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"let _ = { };\")"
---
[
    VariableDeclaration(
        VariableDeclaration {
            name: Identifier {
                name: "_",
                location: Location(
                    4..5,
                ),
            },
            variable_type: None,
            value: Scope(
                Scope {
                    body: [],
                    location: Location(
                        8..11,
                    ),
                },
            ),
            location: Location(
                0..12,
            ),
        },
    ),
]
