compiler/lume_parser/src/snapshots/lume_parser__tests__scope_snapshots@final.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = { 5 };\")"
---
SOURCE_FILE@0..14
  LET_STMT@0..14
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    WHITESPACE@7..8 " "
    SCOPE_EXPR@8..13
      BLOCK@8..13
        LEFT_BRACE@8..9 "{"
        FINAL_STMT@9..12
          WHITESPACE@9..10 " "
          LIT_EXPR@10..11
            INTEGER_LIT@10..11
              INTEGER_LIT@10..11 "5"
          WHITESPACE@11..12 " "
        RIGHT_BRACE@12..13 "}"
    SEMICOLON@13..14 ";"
